Fix "normal" and "-moz-initial" values for "content" to do the right thing. Bug 262624, r+sr=dbaron